hamburguer menu and send js to client

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -74,5 +74,9 @@ const goal = 3;
 
         {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
         <Footer />
+        <script>
+			import "../scripts/menu.js";
+            console.log("hello")
+		</script>
     </body>
 </html>
