--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,5 +19,8 @@ const pageTitle = "Astro";
 
 		<h1>My Astro site</h1>
 		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
