--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 ---
 import Navigation from './Navigation.astro'
+import ThemeIcon from './ThemeIcon.astro';
 import Hamburguer from './Hamburguer.astro'
 ---
 <header>
     <nav>
         <Hamburguer />
+         <ThemeIcon />
         <Navigation />
     </nav>
 </header>
